[package]
name = "mytool"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing ML training artifacts in cloud storage"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# CLI and async runtime
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Cloud storage
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.3"
object_store = { version = "0.5.6", features = ["aws"] }
futures-util = "0.3"
bytes = "1.5.0"
futures = "0.3.28"

# Configuration
config = "0.13"
dirs = "5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# FUSE filesystem
fuser = "0.12.0"
libc = "0.2.148"

[dev-dependencies]
tempfile = "3.3"
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"

[[bin]]
name = "mytool"
path = "src/main.rs"